# color-grep

./: Makefile  README.md  color-grep  driver.sh  pyproject.toml
color_grep/: __init__.py  color.py
e2e_tests/: html_output.html
tests/: test_color.py  test_color_grep.py
