[tool.poetry]
name = "color-grep"
version = "0.1.0"
description = ""
authors = ["David Shepherd <davidshepherd7@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
# TODO Remove this to be compat with older python
colour_science = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
